2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-transform.[ch]: added new function
	gimp_display_shell_transform_segments().

	* app/display/gimpdisplayshell-selection.c (selection_transform_segs) 
	* app/tools/gimpregionselecttool.c
	(gimp_region_select_tool_calculate): use the new function instead
	of looping over the segments.

2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_pen)
	(gimp_display_shell_draw_vector): use the new transform functions.

	* app/tools/gimpdrawtool.c  (gimp_draw_tool_draw_lines)
	(gimp_draw_tool_draw_strokes): bail out early if num_points == 0.

2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-transform.[ch]: renamed
	transform_coords() to transform_coordinate(); same for the
	untransform variant. Added new functions transform_points() and
	transform_coords() that work on arrays.

	* app/display/gimpdisplayshell-autoscroll.c
	* app/display/gimpdisplayshell-callbacks.c: changed accordingly.

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_lines)
	(gimp_draw_tool_draw_strokes): use the new transform functions.

2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.c (iscissors_draw_curve):
	implement using gimp_draw_tool_draw_lines(). 

2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_dispose):
	chain up.

	* libgimp/gimpzoompreview.[ch]: added API to get a pointer to the
	GimpZoomModel used by the preview and added a constructor that
	allows to pass a model.

	* libgimp/gimpui.def: updated.

2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpfreeselecttool.c (gimp_free_select_tool_draw):
	implement using gimp_draw_tool_draw_lines().

2006-08-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainercombobox.[ch]: allow to configure the
	ellipsize property of the text renderer.
