@@ -28,9 +28,32 @@ GimpFontSelectButton
 
 </para>
 
+@: 
+@: 
+@:
+
 @gimpfontselectbutton: the object which received the signal.
 @arg1: 
 @arg2: 
+
+<!-- ##### SIGNAL GimpFontSelectButton::font-set ##### -->
+<para>
+
+</para>
+
+@gimpfontselectbutton: the object which received the signal.
+@arg1: 
+@arg2: 
+
+<!-- ##### ARG GimpFontSelectButton:font-name ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG GimpFontSelectButton:title ##### -->
+<para>
+
+</para>
 
 <!-- ##### ARG GimpFontSelectButton:font-name ##### -->
 <para>
