@@ -103,3 +103,10 @@ Definitions and Functions relating to CMYK colors.
 @alpha: 
 
 
+<!-- ##### MACRO GIMP_TYPE_CMYK ##### -->
+<para>
+
+</para>
+
+
+
